--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@
     color: white;
     text-align: center;
     font-family: papyrus, serif;
+    font-size: 50px;
 }
 
 .links {
     color: blue;
     font-style: italic;
     text-decoration: none;
+    font-size: 25px;
 }
 
 .list {
