--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 .Title {
     background-color: black;
     color: white;
@@ -11,9 +14,13 @@
     font-style: italic;
     text-decoration: none;
     font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .list {
     list-style-type: square;
 }
 
+p {
+    color: red;
+}
